# Zentra-Chain

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.bat
.cargo/: config.toml
.github/workflows/: release.yml
crates/zentra-cli/: Cargo.toml
crates/zentra-cli/src/: main.rs
crates/zentra-consensus/: Cargo.toml
crates/zentra-consensus/src/: difficulty.rs  emission.rs  ghostdag.rs  lanes.rs  lib.rs  miner.rs  validator.rs
crates/zentra-core/: Cargo.toml
crates/zentra-core/src/: block.rs  dag.rs  database.rs  genesis.rs  header.rs  lib.rs  mempool.rs  merkle.rs  transaction.rs  utxo.rs
crates/zentra-finance/: Cargo.toml
crates/zentra-finance/src/: amm.rs  encrypted_mempool.rs  lib.rs  pol.rs  quarantine.rs  tss.rs  vault.rs
crates/zentra-qt/: Cargo.toml
crates/zentra-qt/src/: main.rs
crates/zentra-runtime/: Cargo.toml
crates/zentra-runtime/src/: engine.rs  gas.rs  governance.rs  lib.rs  state.rs
crates/zentra-types/: Cargo.toml
crates/zentra-types/src/: address.rs  amount.rs  constants.rs  error.rs  hash.rs  lane.rs  lib.rs  tx_type.rs
crates/zentra-wallet/: Cargo.toml
crates/zentra-wallet/src/: address.rs  keygen.rs  keystore.rs  lib.rs  signer.rs
crates/zentrad/: Cargo.toml
crates/zentrad/src/: config.rs  main.rs  node.rs  p2p.rs  p2p_sync.rs  pool.rs  rpc.rs  sync.rs
deploy/: SEED-NODE.md
