[workspace]
resolver = "2"
members = [
    "crates/zentra-types",
    "crates/zentra-core",
    "crates/zentra-consensus",
    "crates/zentra-runtime",
    "crates/zentra-finance",
    "crates/zentra-wallet",
    "crates/zentrad",
    "crates/zentra-cli",
    "crates/zentra-qt",
]

[workspace.package]
version = "0.0.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/Jestag-CryptoJarcc/Zentra-Chain"
authors = ["Zentra Core Contributors"]

[workspace.dependencies]
# Internal crates
zentra-types = { path = "crates/zentra-types" }
zentra-core = { path = "crates/zentra-core" }
zentra-consensus = { path = "crates/zentra-consensus" }
zentra-runtime = { path = "crates/zentra-runtime" }
zentra-finance = { path = "crates/zentra-finance" }
zentra-wallet = { path = "crates/zentra-wallet" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = { version = "1.5", features = ["derive"] }
bincode = "1.3"

# Cryptography
blake2 = "0.10"
sha2 = "0.10"
ed25519-dalek = { version = "2.1", features = ["serde", "rand_core"] }
rand = "0.8"
rand_core = "0.6"

# Storage
rocksdb = { version = "0.22", default-features = false }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Concurrency
parking_lot = "0.12"
dashmap = "6"

# CLI
clap = { version = "4", features = ["derive"] }

# Math
primitive-types = "0.13"

# Misc
hex = "0.4"
chrono = "0.4"
bytes = "1"

[profile.release]
lto = "thin"
codegen-units = 4
opt-level = 3
strip = "symbols"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2
