[package]
name = "zentra-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Zentra L1 command-line client to interface with zentrad over RPC"

[[bin]]
name = "zentra-cli"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
