[package]
name = "zentra-consensus"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Multi-algorithm PoW consensus, GhostDAG ordering, and difficulty engines for Zentra L1"

[dependencies]
zentra-types = { workspace = true }
zentra-core = { workspace = true }
serde = { workspace = true }
borsh = { workspace = true }
blake2 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = "3"
