[package]
name = "zentra-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core BlockDAG primitives, data structures, and database layer for Zentra L1"

[dependencies]
zentra-types = { workspace = true }
serde = { workspace = true }
borsh = { workspace = true }
blake2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
bytes = { workspace = true }
rocksdb = { workspace = true }
serde_json = { workspace = true }
tempfile = "3"

[dev-dependencies]
serde_json = { workspace = true }
tempfile = "3"
