[package]
name = "zentra-qt"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Zentra Core Desktop Wallet wrapper GUI"

[[bin]]
name = "zentra-qt"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
eframe = "0.29"
serde = { workspace = true }
serde_json = { workspace = true }
ureq = { version = "2.9", features = ["json"] }
tokio = { workspace = true }
sysinfo = "0.31"
rfd = "0.14"
egui_extras = { version = "0.29", features = ["image"] }
image = { version = "0.25", default-features = false, features = ["png"] }
sha2 = { workspace = true }
ed25519-dalek = { workspace = true }
zentra-wallet = { workspace = true }
zentra-types = { workspace = true }
hex = { workspace = true }
